# FdF

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  HomeCMakeLists.txt  Makefile  README.md  SchoolCMakeLists.txt  a.out  author  colorset.c  draw.c  draw_line.c  fdf.h  ft_spnbrcount.c  get_dot.c  get_z_matrix.c  main.c  main.txt  main2.c  norm.sh  print.c  print_menu.c  program.c  read_file.c  read_map.c  segfault.txt  test.txt  window.c  window1.c
fdf2/: a.out  draw.c  fdf.h  main.c  read_file.c
fdf2/libft/: Makefile  ft_wdcounter.c  libft.h
fdf3/: CMakeLists.txt  a.out  fdf.h  main.c
fdf4/: CMakeLists.txt  a.out  draw.c  fdf.h  main.c  read_file.c  segfault.txt
includes/: fdf.h
libft/: .gitignore  CMakeLists.txt  CMakeLists2.txt  HomeCMakeLists.txt  Makefile  SchoolCMakeLists.txt  cfiles.txt  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_free_array.c  ft_free_matrix.c  ft_isdigit.c  ft_isdigit2.c  ft_ishex.c  ft_ishexlow.c  ft_ishexnumber.c  ft_ishexup.c  ft_ismark.c  ft_isnumber.c  ft_ispoint.c  ft_issign.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_open_read.c  ft_putchar.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_realloc.c  ft_stradd.c  ft_strcat.c  (+31 more)
libft/arr/: ft_free_matrix.c
libft/gnl/: ft_wdcounter.c  get_next_line.c
libft/includes/: bonus.h  libft.h  tmp.h
libft/is/: ft_isdigit.c  ft_ishex.c
libft/loc/: ft_free_array.c  ft_free_matrix.c
libft2/: libft.h
libft21/: .gitignore  libft.h
minilibx_linux/test/: mlx-test
minilibx_macos/: CMakeLists.txt
srcs/: cfiles.txt  draw.c  draw_line.c  ft_free_fdf.c  ft_spdgcount.c  ft_spnbrcount.c  game_over.c  get_color.c  get_dot.c  get_height.c  get_height_and_width.c  get_width.c  get_z_matrix.c  hooks.c  main.c  print.c  print_menu.c  read_map.c  set_default.c  window.c  window.txt
test_maps/: invalid_map.fdf  qwe.fdf  small.fdf
